--- a/calc.css
+++ b/calc.css
@@ -4,41 +4,39 @@
 }
 
 body {
-  /* background-position: center; */
-  /* background-size: 100% 100%; */
   background-color: #3c6255;
   font-family: "Montserrat",
     "Helvetica Neue", sans-serif;
 }
-.section {
+section {
   margin: 0 auto;
   width: 1440px;
-  padding: 40px 80px;
+  padding: 0 80px;
+}
+.main {
+  display: flex;
 }
 .theme {
   display: flex;
-  align-items: center;
-  /* gap: 100px; */
+
+  flex-direction: column;
 }
 .theme-title {
   font-size: 40px;
   font-weight: 500;
   color: #eae7b1;
-  /* text-align: center; */
-  /* margin-top: 20px; */
-  /* margin-bottom: 120px; */
 }
 .theme-switcher {
   display: flex;
-  margin-left: auto;
+  margin: 0 auto;
   gap: 28px;
+  flex-direction: column;
 }
 
 .theme-btn {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* gap: 20px; */
   font-size: 24px;
   font-weight: 500px;
   color: #2b473d;
@@ -50,59 +48,51 @@ body {
     rgba(0, 0, 0, 0.48);
   font-family: "Montserrat",
     "Helvetica Neue", sans-serif;
+  cursor: pointer;
+  border: none;
 }
 .title {
   font-size: 40px;
   font-weight: 500;
   color: #eae7b1;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 60px;
   margin-bottom: 40px;
 }
 .calc {
-  height: 660px;
+  height: 580px;
   margin: 0 auto;
-  width: 400px;
-  /* height: 400px; */
+  width: 380px;
   padding: 40px;
   background-color: #a6bb8d;
   background-repeat: no-repeat;
-  border-radius: 20px;
+  border-radius: 40px;
   box-shadow: 3px 3px 9px 3px
     rgba(0, 0, 0, 0.48);
 }
 .screen {
   background-color: #eae7b1;
-  /* width: 360px; */
   height: 80px;
   margin-bottom: 40px;
-  /* border: 2px solid #000; */
   border-radius: 24px;
   box-shadow: 3px 3px 9px 3px
     rgba(0, 0, 0, 0.48) inset;
 }
 
 .buttons {
-  margin: 0 auto;
+  /* margin: 0 auto; */
   display: grid;
-  gap: 40px;
+  gap: 20px;
   grid-template-columns: repeat(
     4,
-    40px
+    60px
   );
-  /* display: flex; */
-  /* flex-direction: row; */
-  /* flex-wrap: wrap; */
-  width: 40px;
-  height: 40px;
   font-size: 20px;
   font-weight: 500;
   color: #eae7b1;
   text-align: center;
-  /* margin-top: 20px; */
 }
 .button {
-  width: 60px;
   height: 60px;
   box-shadow: 3px 3px 9px 3px
     rgba(0, 0, 0, 0.48);
